# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

12-Apr-2013 Jean-Marie Simonet
 # [#30538] Joomla Update Options button displays even if you don't have permission. Thanks Mark Dexter
 # [#30537] Menus with default view in URL and sub-tasks are missing in other defined attributes and do not display correctly in menu type input in backend. Thanks Beat

11-Apr-2013 Jean-Marie Simonet
 #$ [#30534] Missing Help Button in Joomla! Update component. Thanks Mark Dexter

08-Apr-2013 Michael Babker
 # [#29916] MySQL connections are not closed.  Thanks Ian Goldstein
 # [#30505] Weblink module ignores end publishing date.  Thanks Thomas Hunziker

07-Apr-2013 Michael Babker
 # [#30091] Help Screens, key wrong, missing or not created correctly.  Thanks Mark Dexter
 # [#30428] nofollw not set correctly in mod_weblinks.  Thanks Ingo Wetsches
 # [#30209] Undefined index errors by using the style 'beezTabs' at an beez template.  Thanks Constantin Romankiewicz
 # [#30041] Use of '/' not being handled well on Windows Servers.  Thanks Parth Lawate
 # [#30054] Catchable fatal error: Object of class stdClass could not be converted to string in /plugins/system/debug/debug.php on line 303.  Thanks Ryan K.
 ^ [#29898] mod_banners module must be unprotected extension.  Thanks Alex B.

06-Apr-2013 Mark Dexter
 # [#30482] Fix tel validation in 2.5.x series. Thanks Don Gilbert.
 # [#30480] com_contact error in admin->view->contacts search "author:xxxx". Thanks Brent Cordis.

04-Apr-2013 Mark Dexter
 # Revert [#30430] Severe bug with "com_content" component routing.

04-Apr-2013 Jean-Mari Simonet
 # [#30430] Severe bug with "com_content" component routing. Thanks sajal soni.

28-Mar-2013 Jean-Marie Simonet
 # *Multilanguage 2.5: SIngle article display does not filter correctly author contact per language.
 # [#29417] sendMail automatically adds sender as replyTo. Thanks Roberto.

24-Mar-2013 Michael Babker