@@ -29,6 +29,7 @@ $ -> Language fix or change
 12-Apr-2013 Jean-Marie Simonet
  # [#30538] Joomla Update Options button displays even if you don't have permission. Thanks Mark Dexter
  # [#30537] Menus with default view in URL and sub-tasks are missing in other defined attributes and do not display correctly in menu type input in backend. Thanks Beat
+ #+ [#30139] Memcache handler Issue (Not working at all). Thanks Ofer Cohen and sajal suni
 
 11-Apr-2013 Jean-Marie Simonet
  #$ [#30534] Missing Help Button in Joomla! Update component. Thanks Mark Dexter
